# xmc-1300-cmake

./: .gitignore  CMakeLists.txt  CMakePresets.json
cmake/: gcc-arm-cortex-m0.cmake
ld/: XMC1300x0064.ld
lib/xmc-1/: CMakeLists.txt
lib/xmc-bldc-scalar-hall/: CMakeLists.txt
lib/xmc-bldc-scalar-hall/include/: bldc_scalar_user_interface.h
lib/xmc-bldc-scalar-hall/include/Configuration/: bldc_scalar_user_config.h
lib/xmc-bldc-scalar-hall/include/ControlModule/: bldc_scalar_control_scheme.h
lib/xmc-bldc-scalar-hall/src/: bldc_scalar_variables_config.c
lib/xmc-bldc-scalar-hall/src/ControlModule/: bldc_scalar_control_hall.c  bldc_scalar_control_scheme.c  bldc_scalar_ramp_generator.c
lib/xmc-bldc-scalar-hall/src/Interrupts/: bldc_scalar_control_loop.c  bldc_scalar_ctrap_periodmatch.c  bldc_scalar_hall_event.c  bldc_scalar_hall_state_machine.c  bldc_scalar_pattern_shadowtx.c  bldc_scalar_protection_error.c
lib/xmc-bldc-scalar-hall/src/MCUInit/: ccu4.c  ccu8.c  gpio.c  nvic.c  posif.c  systick.c  vadc.c
lib/xmc-bldc-scalar-hall/src/MidSys/: bldc_scalar_current_motor.c  bldc_scalar_pwm_bc.c  bldc_scalar_speed_pos_hall.c  bldc_scalar_volt_dcbus.c  bldc_scalar_volt_potentiometer.c  bldc_scalar_volt_userdef.c
lib/xmc-pmsm-foc/: CMakeLists.txt
lib/xmc-pmsm-foc/Configuration/: pmsm_foc_const.h  pmsm_foc_macro.h  pmsm_foc_user_config.h
lib/xmc-pmsm-foc/Configuration/Controller_Card/: pmsm_foc_CUSTOM_MCU.h
lib/xmc-pmsm-foc/Configuration/Inverter_Card/: pmsm_foc_CUSTOM_INVERTER.h
lib/xmc-pmsm-foc/Configuration/Motors/: pmsm_foc_motor_CUSTOM_MOTOR.h
lib/xmc-pmsm-foc/Interrupts/: pmsm_foc_ctrap_isr.c
lib/xmc-pmsm-foc/MCUInit/: clock.c  gpio.c  mcuinit.c  posif.c  posif.h
lib/xmc-pmsm-foc/MIDSys/: pmsm_foc_speed_pos_hall.c
src/: main.c  main_b.c  main_blink.c
src/startup/: startup_XMC1300.S  system_XMC1300.c
