
add_library(XMCNewlib OBJECT
    "Newlib/syscalls.c"
)

set(XMCLIb_HEADERS
    "CMSIS/cm0/core_cm0.h"
    "CMSIS/cm0/core_cmFunc.h"
    "CMSIS/cm0/core_cmInstr.h"
    "XMCLib/inc/xmc_acmp.h"
    "XMCLib/inc/xmc_bccu.h"
    "XMCLib/inc/xmc_can.h"
    "XMCLib/inc/xmc_can_map.h"
    "XMCLib/inc/xmc_ccu4.h"
    "XMCLib/inc/xmc_ccu8.h"
    "XMCLib/inc/xmc_common.h"
    "XMCLib/inc/xmc_dac.h"
    "XMCLib/inc/xmc_device.h"
    "XMCLib/inc/xmc_dma.h"
    "XMCLib/inc/xmc_dma_map.h"
    "XMCLib/inc/xmc_dsd.h"
    "XMCLib/inc/xmc_ebu.h"
    "XMCLib/inc/xmc_ecat.h"
    "XMCLib/inc/xmc_ecat_map.h"
    "XMCLib/inc/xmc_eru.h"
    "XMCLib/inc/xmc_eth_mac.h"
    "XMCLib/inc/xmc_eth_mac_map.h"
    "XMCLib/inc/xmc_eth_phy.h"
    "XMCLib/inc/xmc_fce.h"
    "XMCLib/inc/xmc_flash.h"
    "XMCLib/inc/xmc_gpio.h"
    "XMCLib/inc/xmc_hrpwm.h"
    "XMCLib/inc/xmc_hrpwm_map.h"
    "XMCLib/inc/xmc_i2c.h"
    "XMCLib/inc/xmc_i2s.h"
    "XMCLib/inc/xmc_ledts.h"
    "XMCLib/inc/xmc_math.h"
    "XMCLib/inc/xmc_pau.h"
    "XMCLib/inc/xmc_posif.h"
    "XMCLib/inc/xmc_posif_map.h"
    "XMCLib/inc/xmc_prng.h"
    "XMCLib/inc/xmc_rtc.h"
    "XMCLib/inc/xmc_scu.h"
    "XMCLib/inc/xmc_sdmmc.h"
    "XMCLib/inc/xmc_spi.h"
    "XMCLib/inc/xmc_uart.h"
    "XMCLib/inc/xmc_usbd.h"
    "XMCLib/inc/xmc_usbd_regs.h"
    "XMCLib/inc/xmc_usbh.h"
    "XMCLib/inc/xmc_usic.h"
    "XMCLib/inc/xmc_vadc.h"
    "XMCLib/inc/xmc_vadc_map.h"
    "XMCLib/inc/xmc_wdt.h"
    "XMCLib/inc/xmc1_ccu4_map.h"
    "XMCLib/inc/xmc1_ccu8_map.h"
    "XMCLib/inc/xmc1_eru_map.h"
    "XMCLib/inc/xmc1_flash.h"
    "XMCLib/inc/xmc1_gpio.h"
    "XMCLib/inc/xmc1_gpio_map.h"
    "XMCLib/inc/xmc1_rtc.h"
    "XMCLib/inc/xmc1_scu.h"
    "XMCLib/inc/xmc1_usic_map.h"
)

add_library(XMCLib STATIC
    ${XMCLIb_HEADERS}
    "XMCLib/src/xmc_acmp.c"
    "XMCLib/src/xmc_bccu.c"
    "XMCLib/src/xmc_can.c"   
    "XMCLib/src/xmc_ccu4.c"
    "XMCLib/src/xmc_ccu8.c"
    "XMCLib/src/xmc_common.c"
    "XMCLib/src/xmc_common_gcc.S"
    "XMCLib/src/xmc_dac.c"
    "XMCLib/src/xmc_dma.c"
    "XMCLib/src/xmc_dsd.c"
    "XMCLib/src/xmc_ebu.c"
    "XMCLib/src/xmc_ecat.c"
    "XMCLib/src/xmc_eru.c"
    "XMCLib/src/xmc_eth_mac.c"
    "XMCLib/src/xmc_eth_phy_dp83848.c"
    "XMCLib/src/xmc_eth_phy_ksz8031rnl.c"
    "XMCLib/src/xmc_eth_phy_ksz8081rnb.c"
    "XMCLib/src/xmc_fce.c"
    "XMCLib/src/xmc_gpio.c"
    "XMCLib/src/xmc_hrpwm.c"
    "XMCLib/src/xmc_i2c.c"
    "XMCLib/src/xmc_i2s.c"
    "XMCLib/src/xmc_ledts.c"
    "XMCLib/src/xmc_math.c"
    "XMCLib/src/xmc_pau.c"
    "XMCLib/src/xmc_posif.c"
    "XMCLib/src/xmc_prng.c"
    "XMCLib/src/xmc_rtc.c"
    "XMCLib/src/xmc_sdmmc.c"
    "XMCLib/src/xmc_spi.c"
    "XMCLib/src/xmc_uart.c"
    "XMCLib/src/xmc_usbd.c"
    "XMCLib/src/xmc_usbh.c"
    "XMCLib/src/xmc_usic.c"
    "XMCLib/src/xmc_vadc.c"
    "XMCLib/src/xmc_wdt.c"
    "XMCLib/src/xmc1_eru.c"
    "XMCLib/src/xmc1_flash.c"
    "XMCLib/src/xmc1_gpio.c"
    "XMCLib/src/xmc1_rtc.c"
    "XMCLib/src/xmc1_scu.c"
)

target_include_directories(XMCLib PUBLIC CMSIS/cm0 CMSIS/XMC1300 XMCLib/inc)
target_compile_options(XMCLib PRIVATE -Wno-tautological-compare -Wno-array-bounds)
